--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -1,161 +1,76 @@
-{% extends 'base.html' %}
-
-
-  {% block content %}
+{% extends 'base.html' %} {% block content %}
+<br><br>
 <main>
     <div class="container">
 
-      <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
+        <br><br>
 
-        <!-- Navbar brand -->
-        <span class="navbar-brand">Categories:</span>
+        <!--Section: Products v.3-->
+        <section class="text-center mb-4">
 
-        <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
-          aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <!--Grid row-->
+            <div class="row wow fadeIn">
+                {% for item in object_list %}
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4">
 
-        <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="basicExampleNav">
+                    <!--Card-->
+                    <div class="card">
 
-          <!-- Links -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">All
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Shirts</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sport wears</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Outwears</a>
-            </li>
+                        <!--Card image-->
+                        <div class="view overlay">
+                            <img src="{{item.pic.url}}" class="card-img-top" alt="">
+                            <a href="{{ item.get_absolute_url }}">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <!--Card image-->
+                        <!--Card content-->
+                        <div class="card-body text-center">
+                            <!--Category & Title-->
 
-          </ul>
-          <!-- Links -->
-
-          <form class="form-inline">
-            <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
-        </div>
-        <!-- Collapsible content -->
-
-      </nav>
-      <!--/.Navbar-->
-
-      <!--Section: Products v.3-->
-      <section class="text-center mb-4">
-
-        <!--Grid row-->
-        <div class="row wow fadeIn">
-          {% for item in object_list %}
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="{{item.pic.url}}" class="card-img-top"
-                  alt="">
-                <a href="{{ item.get_absolute_url }}">
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>{{ item.get_category_display}}</h5>
-                </a>
-                <h5>
-                  <strong>
+                            <h5>
+                                <strong>
                     <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.item_name }}
                       <span class="badge badge-pill {% if item.get_label_display == 'New' %} danger-color {% else %} primary-color {% endif %}">{{ item.get_label_display }}</span>
                     </a>
                   </strong>
-                </h5>
+                            </h5>
 
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$
+                            <h4 class="font-weight-bold blue-text" style="color: black;">
+                                <strong>&#8377
                   {% if item.discount_price %}
                   {{ item.discount_price }}
                   {% else %}
                   {{ item.price }}
                   {% endif %}
                   </strong>
-                </h4>
+                            </h4>
 
-              </div>
-              <!--Card content-->
+                        </div>
+                        <!--Card content-->
+
+                    </div>
+                    <!--Card-->
+
+                </div>
+                <!--Grid column-->
+
+                {% endfor %}
+
 
             </div>
-            <!--Card-->
+            <!--Grid row-->
 
-          </div>
-          <!--Grid column-->
+        </section>
+        <!--Section: Products v.3-->
 
-          {% endfor %}
-         
+        <!--Pagination-->
 
-        </div>
-        <!--Grid row-->
-
-      </section>
-      <!--Section: Products v.3-->
-
-      <!--Pagination-->
-      <nav class="d-flex justify-content-center wow fadeIn">
-        <ul class="pagination pg-blue">
-
-          <!--Arrow left-->
-          <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-
-          <li class="page-item active">
-            <a class="page-link" href="#">1
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">3</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">4</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">5</a>
-          </li>
-
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <!--Pagination-->
+        <!--Pagination-->
 
     </div>
-  </main>
-  <!--Main layout-->
+</main>
+<!--Main layout-->
 
 {% endblock %}
