--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 
-  <head>
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/stylewise.css">
@@ -11,51 +10,40 @@
     <title>Home | Cepstrum</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  </head>
-  <style>
-  .my-nav{
-position: absolute;
-z-index: 10;
-width: 100%;
-}
-
-
-body{
-  background-color: black;
-  color: white;
-}
-
-NavItem{
-  float:right;
-}
-
-
-
-
-
-
+</head>
+<style>
+    .my-nav {
+        position: absolute;
+        z-index: 10;
+        width: 100%;
+    }
+    
+    body {
+        background-color: black;
+        color: white;
+    }
+    
+    NavItem {
+        float: right;
+    }
 </style>
 
-{% block css %}
-  
-{% endblock css %}
-  
-  <body>
-<!-- loader -->
+{% block css %} {% endblock css %}
 
-<!-- loaderend -->
-<nav class="my-nav navbar navbar-expand-lg navbar-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'home' %}"> <img
-      src="https://www.iitg.ac.in/cepstrum/common/logo.svg"
-      width="40%" height="40%" alt=""></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<body>
+    <!-- loader -->
+
+    <!-- loaderend -->
+    <nav class="my-nav navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}"> <img src="https://www.iitg.ac.in/cepstrum/common/logo.svg" width="40%" height="40%" alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-        
-        <!-- <li class="nav-item dropdown active" class="">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+
+                    <!-- <li class="nav-item dropdown active" class="">
           <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Initiatives
           </a>
@@ -74,93 +62,79 @@ NavItem{
             <a class="dropdown-item" href="{% url 'celebration:all' %}">Celebrations</a>
           </div>
         </li> -->
-        <li class="nav-item active NavItem mx-3">
-          <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
-        </li>
-        {% if user.is_authenticated %}
-        <li class="nav-item dropdown active" class="">
-          <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item active NavItem mx-3">
+                        <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item dropdown active" class="">
+                        <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Current Campus Junta
           </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="{% url 'bios:all' %}">Profiles of Seniors</a>
-            {% if not user.bio %}
-            <a class="dropdown-item" href="{% url 'bios:bio_create' %}">CREATE Bio</a>
-            {% endif %}
-            <a class="dropdown-item" href="{% url 'bios:project_list' %}">Project List</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown active" class="">
-          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="{% url 'bios:all' %}">Profiles of Seniors</a> {% if not user.bio %}
+                            <a class="dropdown-item" href="{% url 'bios:bio_create' %}">CREATE Bio</a> {% endif %}
+                            <a class="dropdown-item" href="{% url 'bios:project_list' %}">Project List</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown active" class="">
+                        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Alumni
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'alumni:all' %}">Profiles of Alumni</a>
-            {% if not user.alumni_bio and not user.bio %}
-            <a class="dropdown-item" href="{% url 'alumni:alumni_create' %}">CREATE Bio</a>
-            {% endif %}
-          </div>
-        </li>
-        <li class="nav-item dropdown active" class="">
-          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{% url 'alumni:all' %}">Profiles of Alumni</a> {% if not user.alumni_bio and not user.bio %}
+                            <a class="dropdown-item" href="{% url 'alumni:alumni_create' %}">CREATE Bio</a> {% endif %}
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown active" class="">
+                        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Account Management
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'account_email' %}">Update Email</a>
-            <a class="dropdown-item" href="{% url 'account_set_password' %}">Set your password</a>
-          </div>
-        </li>
-        {% else %}
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{% url 'account_email' %}">Update Email</a>
+                            <a class="dropdown-item" href="{% url 'account_set_password' %}">Set your password</a>
+                        </div>
+                    </li>
+                    {% else %} {% endif %}
+                    <li class="nav-item active NavItem mx-3">
+                        <a class="nav-link" aria-current="page" href="{% url 'inphase:all' %}">Initiatives</a>
+                    </li>
+                    <li class="nav-item active NavItem mx-3">
+                        <a class="nav-link" aria-current="page" href="{% url 'timetable:index' %}">Timetable</a>
+                    </li>
+                    <li class="nav-item active NavItem mx-3">
+                        <a class="nav-link" aria-current="page" href="{% url 'core:home' %}">Merchendise</a>
+                    </li>
+                    <li class="nav-item active NavItem mx-3">
+                        <a class="nav-link" aria-current="page" href="{% url 'celebration:all' %}">Events</a>
+                    </li>
+                    <li class="nav-item active NavItem mx-3">
+                        <a class="nav-link" aria-current="page" href="{% url 'team:all' %}">Team</a>
+                    </li>
+                    {% if 'AR' in user.groups.all.0.name %}
+                    <li class="nav-item active NavItem mx-3">
+                        <a class="nav-link" aria-current="page" href="{% url 'timetable:adminpanel' %}">Timetable Admin</a>
+                    </li>
+                    {% endif %}
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item active"><a class="nav-link" href="{% url 'accounts:logout' %}">LOGOUT</a></li>
+                    {% else %}
+                    <li class="nav-item active"><a class="nav-link" href="{% url 'accounts:login' %}">Login</a></li>
+                    {% endif %}
+            </div>
+            </ul>
 
-        {% endif %}
-        <li class="nav-item active NavItem mx-3">
-          <a class="nav-link" aria-current="page" href="{% url 'inphase:all' %}">Initiatives</a>
-        </li>
-        <li class="nav-item active NavItem mx-3">
-          <a class="nav-link" aria-current="page" href="{% url 'timetable:index' %}">Timetable</a>
-        </li>
-        <li class="nav-item active NavItem mx-3">
-          <a class="nav-link" aria-current="page" href="{% url 'celebration:all' %}">Events</a>
-        </li>
-        <li class="nav-item active NavItem mx-3">
-          <a class="nav-link" aria-current="page" href="{% url 'team:all' %}">Team</a>
-        </li>
-        {% if 'AR' in user.groups.all.0.name %}
-        <li class="nav-item active NavItem mx-3">
-          <a class="nav-link" aria-current="page" href="{% url 'timetable:adminpanel' %}">Timetable Admin</a>
-        </li>
-        {% endif %}
-      </ul>
-      <ul class="navbar-nav ml-auto">
-        {% if user.is_authenticated %}
-        <li class="nav-item active"><a class="nav-link" href="{% url 'accounts:logout' %}">LOGOUT</a></li>
-        {% else %}
-        <li class="nav-item active"><a class="nav-link" href="{% url 'accounts:login' %}">Login</a></li>
-        {% endif %}
-    </div>
-      </ul> 
-
-    </div>
-  </div>
-</nav>
-
-
-{% block carousel %}
-  
-{% endblock carousel %}
-
-{% block content %}
-  
-{% endblock content %}
+        </div>
+        </div>
+    </nav>
 
 
-{% block js %}
-  
-{% endblock js %}
-  
-   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>  
+    {% block carousel %} {% endblock carousel %} {% block content %} {% endblock content %} {% block js %} {% endblock js %}
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+</body>
 
 </html>
