--- a/bios/templates/bios/project_list.html
+++ b/bios/templates/bios/project_list.html
@@ -1,57 +1,54 @@
-{% extends "bios/bio_base.html" %}
-{% load bootstrap %}
-{% block post_content %}
-{% if user.is_authenticated %}
-<br><br>
+{% extends "bios/bio_base.html" %} {% load bootstrap %} {% block navcontent %}
+<h1><b>Projects</b> </h1>
+<br>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem alias neque distinctio sapiente magni beatae pariatur. Placeat veritatis consequuntur ab odit ullam ut nobis repellat eius omnis aut! Aperiam, placeat!
+</p>
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-	Filter
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: black;">
-	<div class="modal-dialog modal-dialog-scrollable">
-	  <div class="modal-content">
-		<div class="modal-header">
-		  <h5 class="modal-title" id="exampleModalLabel">Filters</h5>
-		  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		</div>
-		<div class="modal-body">
-			<form method="GET" class="">
-				{{filter.form|bootstrap}}
-				<button type="submit" class="btn btn-primary">Search</button>
-				<a href="{% url 'bios:all' %}" class="btn btn-secondary">Clear</a>
-				
-			</form>
-		</div>
-		<div class="modal-footer">
-		  
-		</div>
-	  </div>
-	</div>
-  </div>
-  <h1 style="text-align:center;">This is Project List</h1>
-  <div class="row container">
-    <br>
-    {% for i in filter.qs %}
+	Filter out Projects
+  </button> {% endblock navcontent %} {% block post_content %} {% if user.is_authenticated %}
 
-      <div style="text-align:center;" class="col-sm-6 my-5">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title text-muted">{{i}}</h5>
-            <a href="{% url 'bios:project_detail' i.id %}" class="btn btn-outline-info"> Project Details</a>
-          </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: black;">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Filters</h5>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+            <div class="modal-body">
+                <form method="GET" class="">
+                    {{filter.form|bootstrap}}
+                    <button type="submit" class="btn btn-primary">Search</button>
+                    <a href="{% url 'bios:all' %}" class="btn btn-secondary">Clear</a>
+
+                </form>
+            </div>
+            <div class="modal-footer">
+
+            </div>
         </div>
-      </div>
-      <hr>
+    </div>
+</div>
+<div class="row container"> {% for i in filter.qs %}
+
+    <div style="text-align:center;" class="col-sm-6 my-5">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title text-muted">{{i}}</h5>
+                <a class="btn btn-info" href="{% url 'bios:project_detail' i.id %}">Know More</a>
+            </div>
+        </div>
+    </div>
+    <hr>
 
     <br>
 
-    <br>
-    {% endfor %}
-  </div>
+    <br> {% endfor %}
+</div>
 </div>
 
 
 
-{% endif %}
-{% endblock %}
+{% endif %} {% endblock %}
