--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,7 @@
                             <a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Inked Intelect</a>
                             <a class="dropdown-item" href="{% url 'timetable:index' %}">Timetable</a>
                             <a class="dropdown-item" href="{% url 'core:home' %}">Mechendise</a>
+                            <a class="dropdown-item" href="{% url 'dp:all' %}">Donation</a>
                         </div>
                     </li>
                     <li class="nav-item active NavItem mx-3">
