--- a/inplex/templates/inplex/create_experience.html
+++ b/inplex/templates/inplex/create_experience.html
@@ -170,7 +170,7 @@ my-carousel" data-ride="carousel">
 </div>
 {% endblock carousel %} {% block content %}
 <section class="container mt-5">
-    <h1>Add Experince</h1>
+    <h1>Add Experience</h1>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %} {{ form.media }}
         <div class="row">
